# dgfip-chatbot

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
.streamlit/: config.toml
data/: README.md
data/raw/: info_particulier_impot.csv
notebooks/: eda.ipynb  phase1_eda.ipynb
reports/: eval.md
src/dgfip_chatbot/: __init__.py  config.py
src/dgfip_chatbot/app/: __init__.py  main.py
src/dgfip_chatbot/data/: __init__.py  build.py  chunk.py  clean.py  loaders.py  schema.py  split.py
src/dgfip_chatbot/eval/: __init__.py  experiments.py  harness.py  metrics.py  run.py
src/dgfip_chatbot/generation/: __init__.py
src/dgfip_chatbot/retrieval/: __init__.py  base.py  bm25.py  build.py  dense.py  embedder.py  hybrid.py
tests/: test_data.py  test_eval.py  test_metrics.py  test_retrieval.py  test_smoke.py
